# trantor

./: .appveyor.yml  .clang-format  .cmake-format.json  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  ChangeLog.md  License  README.md  build.sh  conanfile.py  conanfile.txt  deps.macos-12.sh  deps.rockylinux-9.sh  deps.ubuntu-20.04.sh  deps.windows.conan.ps1  deps.windows.vcpkg.ps1  format.sh  test.sh  vcpkg.json
.github/workflows/: cmake.yml  codeql.yml  lint.yml  macos-clang.yml  rockylinux-gcc.yml  ubuntu-gcc.yml  windows-msvc.yml
cmake/: BuildDependencies.cmake  SetBotan.cmake  SetBuildOutput.cmake  SetCAres.cmake  SetConan.cmake  SetCrypto.cmake  SetDepsOptions.cmake  SetDoxygen.cmake  SetExportHeader.cmake  SetInstall.cmake  SetInstallDirs.cmake  SetOpenssl.cmake  SetPackageConfig.cmake  SetSpdlog.cmake  SetSystemAndCompiler.cmake  SetTesting.cmake  SetThreads.cmake  SetTlsProvider.cmake  TestAtomic.cmake
cmake/templates/: TrantorConfig.cmake.in  TrantorConfigVersion.cmake.in
cmake_modules/: FindBotan.cmake  FindLibUring.cmake  Findc-ares.cmake
src/: TcpClientTest.cc  TcpServerTest.cc
trantor/net/: Acceptor.cc  Acceptor.h  AsyncStream.h  CMakeLists.txt  Certificate.h  Channel.cc  Channel.h  Connector.cc  Connector.h  EventLoop.cc  EventLoop.h  EventLoopThread.cc  EventLoopThread.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  InetAddress.cc  InetAddress.h  Pipeline.h  Poller.cc  Poller.h  Resolver.h  Socket.cc  Socket.h  TLSPolicy.h  TcpClient.cc  TcpClient.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h  Timer.cc  Timer.h  TimerQueue.cc  TimerQueue.h  TlsInitiator.h  callbacks.h
trantor/net/inner/: Acceptor.cc  Acceptor.h  AresResolver.cc  AresResolver.h  AsyncStreamBufferNode.cc  BotanTLSConnectionImpl.cc  BotanTLSConnectionImpl.h  BufferNode.h  Channel.cc  Channel.h  Connector.cc  Connector.h  FileBufferNodeUnix.cc  FileBufferNodeWin.cc  MemBufferNode.cc  NormalResolver.cc  NormalResolver.h  OpenSSLConnectionImpl.cc  OpenSSLConnectionImpl.h  Poller.cc  Poller.h  Socket.cc  Socket.h  StreamBufferNode.cc  TLSProvider.h  TcpConnectionImpl.cc  TcpConnectionImpl.h  Timer.cc  Timer.h  TimerQueue.cc  TimerQueue.h
trantor/net/inner/poller/: EpollPoller.cc  EpollPoller.h  IoUringPoller.cc  IoUringPoller.h  KQueue.cc  KQueue.h  PollPoller.cc  PollPoller.h
trantor/net/inner/tlsprovider/: BotanTLSProvider.cc  OpenSSLProvider.cc
trantor/net/ssl/: SSLConnection.cc  SSLConnection.h  SSLConnectionSkipped.cc  SSLServer.cc  SSLServer.h
trantor/tests/: AsyncFileLoggerTest.cc  AsyncFileLoggerTest1.cc  AutomaticSSLClientTest.cc  AutomaticSSLServerTest.cc  CMakeLists.txt  ConcurrentTaskQueueTest.cc  DelayedSSLClientTest.cc  DelayedSSLServerTest.cc  DnsTest.cc  KickoffTest.cc  LoggerMacroTest.cc  LoggerTest.cc  MTLSClient.cc  MTLSServer.cc  PathConversionTest.cc  RunInLoopTest1.cc  RunInLoopTest2.cc  RunInloopTest.cc  RunOnQuitTest.cc  SSLClientTest.cc  SSLServerTest.cc  SendfileTest.cc  SendstreamTest.cc  SerialTaskQueueTest.cc  SerialTaskQueueTest1.cc  SerialTaskQueueTest2.cc  SpdLoggerTest.cc  TcpAsyncStreamServerTest.cc  TcpClientTest.cc  TcpServerTest.cc  TimerTest.cc  TimerTest1.cc  TimingWheelTest.cc  cert.pem  key.pem
trantor/unittests/: CMakeLists.txt  DateUnittest.cc  HashUnittest.cc  InetAddressUnittest.cc  MsgBufferUnittest.cc  splitStringUnittest.cc  sslNameVerifyUnittest.cc  stringEncodingUnittest.cc
trantor/utils/: AsyncFileLogger.cc  AsyncFileLogger.h  ConcurrentTaskQueue.cc  ConcurrentTaskQueue.h  Date.cc  Date.h  Funcs.h  LockFreeQueue.h  LogStream.cc  LogStream.h  Logger.cc  Logger.h  MsgBuffer.cc  MsgBuffer.h  NonCopyable.h  ObjectPool.h  SerialTaskQueue.cc  SerialTaskQueue.h  TaskQueue.h  TimingWheel.cc  TimingWheel.h  Utilities.cc  Utilities.h  WindowsSupport.cc  WindowsSupport.h  config.h
trantor/utils/crypto/: blake2.c  blake2.cc  blake2.h  botan.cc  md5.cc  md5.h  openssl.cc  sha1.cc  sha1.h  sha256.cc  sha256.h  sha3.cc  sha3.h
